<resources>
    <string name="app_name">Dispute</string>

    <string-array name="category_spor">
        <item>Все споры</item>
        <item>Активные споры</item>
        <item>Ожидаемые споры</item>
        <item>Завершённые споры</item>
    </string-array>

    <string-array name="languages">
        <item>Русский</item>
    </string-array>

    <string-array name="category">
        <item>Футбол</item>
        <item>Баскетбол</item>
        <item>Бокс</item>
        <item>Волейбол</item>
        <item>Теннис</item>
        <item>Борьба</item>
    </string-array>

    <string name="menu1">Домашняя</string>
    <string name="menu2">Категории</string>
    <string name="menu3">Уведомления</string>
    <string name="menu4">Профиль</string>

    <string name="hint_email">Электронная почта</string>
    <string name="hint_password_">Пароль</string>

    <string name="forgot_password">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="email">Email</string>
    <string name="signUp">Вы не зарегистрированы?</string>
    <string name="signUpNow">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="hint_usern">Имя пользователя</string>
    <string name="hint_password_confirm">Подтвердите пароль</string>
    <string name="birthday">Дата рождения</string>
    <string name="required">Заполните.</string>
    <string name="registration">Регистрация</string>
    <string name="required_gender">Выберите пол</string>
    <string name="required_birthday">Введите день рождения</string>
    <string name="mismatch">Пароли не совпадают</string>
    <string name="password_length_min">Пароль должен содержать минимум 6 символов!</string>
    <string name="rate">Ваша ставка</string>
    <string name="rateCaption">KZT</string>
    <string name="choose_first">Сделайте выбор!</string>
    <string name="money_first">Выберите сумму!</string>
    <string name="not_enough_money">Недостаточно средств на счёте!</string>
    <string name="stali_uchastnikom">Вы стали участником, поздравляю!</string>
    <string name="already_in">Вы уже участвуете</string>
    <string name="category">Категории</string>
    <string name="Live">В прямом эфире</string>
    <string name="end" formatted="false">Выиграла команда: %s</string>
    <string name="allDisputes">Все споры</string>
    <string name="activDisputes">Активные споры</string>
    <string name="waitDisputes">Ожидаемые споры</string>
    <string name="finishedDisputes">Завершенные споры</string>
    <string name="myMoney">Деньги</string>
    <string name="age">Возраст</string>
    <string name="myName">Имя</string>
    <string name="resetPass">Сбросить пароль</string>
    <string name="youWin" formatted="false">Вы победили в споре: %s. Ваш выигрыш составляет %s тг</string>
    <string name="youLose" formatted="false">Вы проиграли в споре: %s.</string>
    <string name="done">Завершен</string>
    <string name="settings">НАСТРОЙКИ</string>
    <string name="language">Язык</string>
    <string name="notification">Уведомления</string>
    <string name="profile">АККАУНТ</string>
    <string name="editing">Редактирование</string>
    <string name="information">ИНФОРМАЦИЯ</string>
    <string name="about_dispute_field">О Dispute</string>
    <string name="terms_of_use_field">Условия использования</string>
    <string name="privacy_policy_field">Политика конфиденциальности</string>
    <string name="menu2_admin">Добавить спор</string>
    <string name="create_dispute_button">Создать спор</string>
    <string name="spor_name">Название спора</string>
    <string name="spor_sub_category">Подкатегория</string>
    <string name="spor_rivor1">Опонент №1</string>
    <string name="spor_rivor2">Опонент №2</string>
    <string name="spor_category">Категория</string>
    <string name="download_image">Загрузите картинку из файла</string>
    <string name="date">дд/мм/гггг</string>
    <string name="time">00:00</string>
    <string name="exit">Выход</string>
    <string name="balance_up">Пополнить баланс</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="personal_data">Личные данные</string>
    <string name="change_pass">Сменить пароль</string>
    <string name="security">Безопасность</string>
    <string name="old_pass">Старый пароль</string>
    <string name="new_pass">Новый пароль</string>
    <string name="repeat_pass">Подтвердите пароль</string>
    <string name="about_dispute">Спорь с друзьями без букмекеров!\r\n\r\nDispute - простое и удобное приложение для спортивных споров с реальными людьми.\r\n\r\nДелай ставки и получай выигрыши с коэффициентом 1.85!</string>
    <string name="privacy_policy">1. Определения\r\n\r\n
Приложение Dispute (далее - «приложение», «мы») серьезно относится к вопросу конфиденциальности информации своих пользователей (далее – «вы», «пользователи приложения»)
Персонифицированной мы называем информацию, содержащую персональные данные (например: ФИО, логин или данные кредитной карты) пользователя приложения, а также информацию о действиях совершаемых вами в приложении. (например: ставка на одну из двух команд). Анонимными мы называем данные, которые невозможно однозначно идентифицировать с конкретным пользователем приложения.\r\n\r\n
2. Использование информации\r\n\r\n
Мы используем персонифицированную информацию конкретного пользователя приложения исключительно для обеспечения ему качественного оказания услуг и их учета. Мы не раскрываем персонифицированных данных одних пользвоателей приложения другим пользователям приложения. Мы никогда не публикуем персонифицированную информацию в открытом доступе и не передаем ее третьим лицам. Исключением являются лишь ситуации, когда предоставление такой информации уполномоченным государственным органам предписано действующим законодательством Республики Казахстан. Мы публикуем и распространяем только отчеты, построенные на основании собранных анонимных данных. При этом отчеты не содержат информацию, по которой было бы возможным идентифицировать персонифицированные данные пользователей услуг. Мы также используем анонимные данные для внутреннего анализа, целью которого является развитие продуктов и услуг приложения.\r\n\r\n
3. Ссылки\r\n\r\n
Приложение может содержать ссылки на другие Android приложения и сайты, не имеющие отношения к нашей компании и принадлежащие третьим лицам. Мы не несем ответственности за точность, полноту и достоверность сведений, размещенных на сайтах третьих лиц, и не берем на себя никаких обязательств по сохранению конфиденциальности информации, оставленной вами на таких сайтах.\r\n\r\n
4. Ограничение ответственности\r\n\r\n
Мы делаем все возможное для соблюдения настоящей политики конфиденциальности, однако, мы не можем гарантировать сохранность информации в случае воздействия факторов находящихся вне нашего влияния, результатом действия которых станет раскрытие информации. Приложение и вся размещенная на нем информация представлены по принципу «как есть» без каких-либо гарантий. Мы не несем ответственности за неблагоприятные последствия, а также за любые убытки, причиненные вследствие ограничения доступа к приложению или вследствие посещения приложения и использования размещенной на нем информации.\r\n\r\n
5. Контакты\r\n\r\n
По вопросам, касающимся настоящей политики, просьба обращаться по адресу automato.playmarket@gmail.com
</string>
    <string name="terms_of_use">Используй как хочешь</string>
    <string name="not_verified">Для этого действия требуется верификация аккаунта. Вам на почту было выслано сообщение с ссылкой для верификации аккаунта</string>
    <string name="wait">Ожидается</string>
    <string name="payment_count">Сумма:</string>
    <string name="has_3d_secure">Моя карта защищена 3D Secure</string>
</resources>
