<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/dispute_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/grey_100" />

                <ImageView
                    android:id="@+id/imageViewCenter"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/grey_100"
                    app:srcCompat="@drawable/ic_image_area" />

                <TextView
                    android:id="@+id/text_on_image"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/download_image" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="10dp"
                    app:backgroundTint="@color/red"
                    app:srcCompat="@drawable/ic_camera" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_layout"
                android:layout_marginLeft="@dimen/fragment_margin"
                android:layout_marginRight="@dimen/fragment_margin">

                <TextView
                    android:id="@+id/spor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spor_name" />

                <EditText
                    android:id="@+id/spor_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_name"
                    android:hint="@string/spor_name" />

                <TextView
                    android:id="@+id/spor_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_name_edit_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/spor_category" />

                <EditText
                    android:id="@+id/spor_category_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_category"
                    android:hint="@string/spor_category" />

                <TextView
                    android:id="@+id/spor_sub_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_category_edit_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/spor_sub_category" />

                <EditText
                    android:id="@+id/spor_sub_category_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_sub_category"
                    android:hint="@string/spor_sub_category" />

                <TextView
                    android:id="@+id/spor_rivor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_sub_category_edit_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/spor_rivor1" />

                <EditText
                    android:id="@+id/spor_rivor1_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_rivor1"
                    android:hint="@string/spor_rivor1" />

                <TextView
                    android:id="@+id/spor_rivor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_rivor1_edit_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/spor_rivor2" />

                <EditText
                    android:id="@+id/spor_rivor2_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spor_rivor2"
                    android:hint="@string/spor_rivor2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/spor_rivor2_edit_text"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_weight="1.5"
                        app:srcCompat="@drawable/calendar2" />

                    <EditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:hint="@string/date"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:hint="@string/time"
                        android:inputType="time" />

                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
