<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent2"
        android:elevation="4dp"
        app:titleTextColor="#fff" />

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_below="@+id/my_toolbar"
        android:background="@drawable/toolbar_dropshadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/upload_photo_imageview"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:onClick="onClick"
                android:scaleType="centerCrop"
                app:riv_oval="true"
                android:src="@drawable/upload_photo" />

            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_usern"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/hint_password_"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/field_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_confirm"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/birthday"
                android:textSize="11sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:src="@drawable/calendar2" />

                <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="right|center"
                    android:onClick="onClick"
                    android:text="ДД/MM/ГГ"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/female_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/female_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="женский" />

                    <ImageView
                        android:id="@+id/female_image"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/female" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/male_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:id="@+id/male_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="мужской" />

                    <ImageView
                        android:id="@+id/male_image"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/male" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_round_whis_stroke"
                android:text="@string/registration"
                android:theme="@style/ThemeOverlay.MyDarkButton" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>



